fix feedback bar size and spacing

--- a/web/frontend/src/components/FeedbackBar/FeedbackBar.scss
+++ b/web/frontend/src/components/FeedbackBar/FeedbackBar.scss
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: start;
   margin-top: 20px;
-  margin-left: 60px;
 
   .feedback-buttons {
     display: flex;
@@ -13,7 +12,7 @@
       border: none;
       cursor: pointer;
       border-radius: 50%;
-      padding: 10px;
+      padding: 15px;
       transition: background-color 0.1s;
       animation: fadeIn 10s ease-in-out;
 
@@ -27,6 +26,7 @@
 
       img {
         width: 20px;
+        display: flex;
       }
     }
 
